# Toxic-Comment-Classification

./: .gitignore  CMakeLists.txt  README.md  Toxic-Comment-Classification.vcxproj  Toxic-Comment-Classification.vcxproj.filters  doxyGen  main.cpp  model.txt
demonstration_data/: output.txt  test.txt  time_working.txt  train-2.csv  train.csv  train2.csv
docs/html/: _b_o_w_8h_source.html  _classifyer_8h_source.html  _controller_8h_source.html  _core_8h_source.html  _data_preprocessing_8h_source.html  _data_provider_8h_source.html  _stemmer_8h_source.html  _stream_data_writer_8h_source.html  _vocab_8h_source.html  annotated.html  annotated_dup.js  class_g_u_i_main_window-members.html  class_g_u_i_main_window.html  class_g_u_i_main_window.js  classes.html  classtcc_1_1_b_o_w-members.html  classtcc_1_1_b_o_w.html  classtcc_1_1_b_o_w.js  classtcc_1_1_b_o_w_features-members.html  classtcc_1_1_b_o_w_features.html  classtcc_1_1_b_o_w_features.js  classtcc_1_1_classifyer-members.html  classtcc_1_1_classifyer.html  classtcc_1_1_classifyer.js  classtcc_1_1_controller-members.html  classtcc_1_1_controller.html  classtcc_1_1_controller.js  classtcc_1_1_core-members.html  classtcc_1_1_core.html  classtcc_1_1_core.js  classtcc_1_1_data_preprocessing-members.html  classtcc_1_1_data_preprocessing.html  classtcc_1_1_data_provider-members.html  classtcc_1_1_data_provider.html  classtcc_1_1_data_provider.js  classtcc_1_1_features-members.html  classtcc_1_1_features.html  classtcc_1_1_features.js  classtcc_1_1_kaggle_data_provider.html  (+61 more)
src/: BOW.cpp  cmdParser.cpp  main.cpp  phrases.h
(+110 files in other folders)
